re PR c++/36411 (ICE with invalid template template parameter)

gcc/cp

2009-02-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/36411
	* pt.c (coerce_template_template_parms): Return 0 if parameter
	is error_mark_node.

gcc/testsuite/

2009-02-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/36411
	* g++.dg/template/void14.C: New.

From-SVN: r144396